--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "acacha/admin-lte-template-laravel": "4.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
+        "uxweb/sweet-alert": "^1.4",
         "yajra/laravel-datatables-oracle": "^7.7"
     },
     "require-dev": {
